switched from select to ul

--- a/index.html
+++ b/index.html
@@ -63,9 +63,12 @@
             <div class="results-content">
 
                 <div id="search" class="search">
+                    <div class="wrapper-dropdown">
 
-                    <div class="styled-select slate"><select></select></div>
-
+                        <span>Search Places</span>
+                        <ul class="dropdown"></ul>
+                        
+                    </div>
                 </div>
                 
                 <h3 class="results-label">Results</h3>
