Added temp logo
plus minor css changes

--- a/index.html
+++ b/index.html
@@ -12,7 +12,12 @@
         <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.2.0/css/font-awesome.min.css">
         <link rel="stylesheet" href="assets/css/main.css">
 
+        <!--fonts -->
         <link href='http://fonts.googleapis.com/css?family=Roboto:400,300,100,500' rel='stylesheet' type='text/css'>
+
+        <link href='http://fonts.googleapis.com/css?family=Sansita+One' rel='stylesheet' type='text/css'>
+
+        <link href='http://fonts.googleapis.com/css?family=Mrs+Sheppards' rel='stylesheet' type='text/css'>
         
         <script src="https://maps.googleapis.com/maps/api/js?v=3.exp&key=AIzaSyCrsUmrRtddYjg4UQtZBQHK1xXxFvxwkyc"></script>
         <script type="text/javascript" src="http://ajax.googleapis.com/ajax/libs/jquery/1.9.1/jquery.min.js"></script>
@@ -35,7 +40,13 @@
 
                     <div class="header">
 
-                        <a href="http://barbados.org" target="_blank"><h1>Barbados Places of Interest</h1></a>
+                        <!--<a href="http://barbados.org" target="_blank"><h1>Barbados Places of Interest</h1></a>-->
+
+                        <hgroup class="tempLogo">
+                            <h1><span>B</span>ARBADOS</h1>
+                            <h2>Beyond Your Imagination</h2>
+                        </hgroup>
+
 
                     </div>
 
